python/rregadmin/secdesc/acentry_wrapper.py


# values for enumeration 'acentry_access_masks_code'
SEC_MASK_GENERIC = -268435456
SEC_MASK_FLAGS = 251658240
SEC_MASK_STANDARD = 16711680
SEC_MASK_SPECIFIC = 65535
SEC_GENERIC_ALL = 268435456
SEC_GENERIC_EXECUTE = 536870912
SEC_GENERIC_WRITE = 1073741824
SEC_GENERIC_READ = -2147483648
SEC_FLAG_SYSTEM_SECURITY = 16777216
SEC_FLAG_MAXIMUM_ALLOWED = 33554432
SEC_STD_DELETE = 65536
SEC_STD_READ_CONTROL = 131072
SEC_STD_WRITE_DAC = 262144
SEC_STD_WRITE_OWNER = 524288
SEC_STD_SYNCHRONIZE = 1048576
SEC_STD_REQUIRED = 983040
SEC_STD_ALL = 2031616
SEC_FILE_READ_DATA = 1
SEC_FILE_WRITE_DATA = 2
SEC_FILE_APPEND_DATA = 4
SEC_FILE_READ_EA = 8
SEC_FILE_WRITE_EA = 16
SEC_FILE_EXECUTE = 32
SEC_FILE_READ_ATTRIBUTE = 128
SEC_FILE_WRITE_ATTRIBUTE = 256
SEC_FILE_ALL = 511
SEC_DIR_LIST = 1
SEC_DIR_ADD_FILE = 2
SEC_DIR_ADD_SUBDIR = 4
SEC_DIR_READ_EA = 8
SEC_DIR_WRITE_EA = 16
SEC_DIR_TRAVERSE = 32
SEC_DIR_DELETE_CHILD = 64
SEC_DIR_READ_ATTRIBUTE = 128
SEC_DIR_WRITE_ATTRIBUTE = 256
SEC_REG_QUERY_VALUE = 1
SEC_REG_SET_VALUE = 2
SEC_REG_CREATE_SUBKEY = 4
SEC_REG_ENUM_SUBKEYS = 8
SEC_REG_NOTIFY = 16
SEC_REG_CREATE_LINK = 32
SEC_ADS_CREATE_CHILD = 1
SEC_ADS_DELETE_CHILD = 2
SEC_ADS_LIST = 4
SEC_ADS_SELF_WRITE = 8
SEC_ADS_READ_PROP = 16
SEC_ADS_WRITE_PROP = 32
SEC_ADS_DELETE_TREE = 64
SEC_ADS_LIST_OBJECT = 128
SEC_ADS_CONTROL_ACCESS = 256
SEC_RIGHTS_FILE_READ = 1179785
SEC_RIGHTS_FILE_WRITE = 1179926
SEC_RIGHTS_FILE_EXECUTE = 1179808
SEC_RIGHTS_FILE_ALL = 2032127
SEC_RIGHTS_DIR_READ = 1179785
SEC_RIGHTS_DIR_WRITE = 1179926
SEC_RIGHTS_DIR_EXECUTE = 1179808
SEC_RIGHTS_DIR_ALL = 2032127
SEC_RIGHTS_REG_READ = 1179785
SEC_RIGHTS_REG_WRITE = 1179926
SEC_RIGHTS_REG_EXECUTE = 1179808
SEC_RIGHTS_REG_ALL = 2032127
SEC_RIGHTS_ADS_ALL = 511
acentry_access_masks_code = c_int # enum
acentry_access_mask = guint32
# ../../../rregadmin/secdesc/acentry.h 198
class ACEntry_(Structure):
    pass
ACEntry = ACEntry_
# ../../../rregadmin/secdesc/acentry.h 204
acentry_new = _libraries['librregadmin.so.1'].acentry_new
acentry_new.restype = POINTER(ACEntry)
# acentry_new()
acentry_new.argtypes = []
acentry_new.__doc__ = \
"""ACEntry * acentry_new()
../../../rregadmin/secdesc/acentry.h:204"""
# ../../../rregadmin/secdesc/acentry.h 210
acentry_new_parse_sddl = _libraries['librregadmin.so.1'].acentry_new_parse_sddl
acentry_new_parse_sddl.restype = POINTER(ACEntry)
# acentry_new_parse_sddl(in_str)
acentry_new_parse_sddl.argtypes = [POINTER(STRING)]
acentry_new_parse_sddl.__doc__ = \
"""ACEntry * acentry_new_parse_sddl(unknown * * in_str)
../../../rregadmin/secdesc/acentry.h:210"""
# ../../../rregadmin/secdesc/acentry.h 216
acentry_new_parse_sddl_quick = _libraries['librregadmin.so.1'].acentry_new_parse_sddl_quick
acentry_new_parse_sddl_quick.restype = POINTER(ACEntry)
# acentry_new_parse_sddl_quick(in_str)
acentry_new_parse_sddl_quick.argtypes = [STRING]
acentry_new_parse_sddl_quick.__doc__ = \
"""ACEntry * acentry_new_parse_sddl_quick(unknown * in_str)
../../../rregadmin/secdesc/acentry.h:216"""
# ../../../rregadmin/secdesc/acentry.h 224
acentry_new_parse_binary = _libraries['librregadmin.so.1'].acentry_new_parse_binary
acentry_new_parse_binary.restype = POINTER(ACEntry)
# acentry_new_parse_binary(in_data, in_size)
acentry_new_parse_binary.argtypes = [POINTER(guint8), POINTER(gssize)]
acentry_new_parse_binary.__doc__ = \
"""ACEntry * acentry_new_parse_binary(unknown * in_data, gssize * in_size)
../../../rregadmin/secdesc/acentry.h:224"""
# ../../../rregadmin/secdesc/acentry.h 230
acentry_copy = _libraries['librregadmin.so.1'].acentry_copy
acentry_copy.restype = POINTER(ACEntry)
# acentry_copy(in_acentry)
acentry_copy.argtypes = [POINTER(ACEntry)]
acentry_copy.__doc__ = \
"""ACEntry * acentry_copy(unknown * in_acentry)
../../../rregadmin/secdesc/acentry.h:230"""
# ../../../rregadmin/secdesc/acentry.h 236
acentry_free = _libraries['librregadmin.so.1'].acentry_free
acentry_free.restype = gboolean
# acentry_free(in_acentry)
acentry_free.argtypes = [POINTER(ACEntry)]
acentry_free.__doc__ = \
"""gboolean acentry_free(ACEntry * in_acentry)
../../../rregadmin/secdesc/acentry.h:236"""
# ../../../rregadmin/secdesc/acentry.h 243
acentry_get_type = _libraries['librregadmin.so.1'].acentry_get_type
acentry_get_type.restype = acentry_type
# acentry_get_type(in_acentry)
acentry_get_type.argtypes = [POINTER(ACEntry)]
acentry_get_type.__doc__ = \
"""acentry_type acentry_get_type(unknown * in_acentry)
../../../rregadmin/secdesc/acentry.h:243"""
# ../../../rregadmin/secdesc/acentry.h 249
acentry_set_type = _libraries['librregadmin.so.1'].acentry_set_type
acentry_set_type.restype = gboolean
# acentry_set_type(in_acentry, in_type)
acentry_set_type.argtypes = [POINTER(ACEntry), acentry_type]
acentry_set_type.__doc__ = \
"""gboolean acentry_set_type(ACEntry * in_acentry, acentry_type in_type)
../../../rregadmin/secdesc/acentry.h:249"""
# ../../../rregadmin/secdesc/acentry.h 255
acentry_get_flags = _libraries['librregadmin.so.1'].acentry_get_flags
acentry_get_flags.restype = acentry_flags
# acentry_get_flags(in_acentry)
acentry_get_flags.argtypes = [POINTER(ACEntry)]
acentry_get_flags.__doc__ = \
"""acentry_flags acentry_get_flags(unknown * in_acentry)
../../../rregadmin/secdesc/acentry.h:255"""
# ../../../rregadmin/secdesc/acentry.h 261
acentry_has_flag = _libraries['librregadmin.so.1'].acentry_has_flag
acentry_has_flag.restype = gboolean
# acentry_has_flag(in_acentry, in_flags)
acentry_has_flag.argtypes = [POINTER(ACEntry), acentry_flags]
acentry_has_flag.__doc__ = \
"""gboolean acentry_has_flag(unknown * in_acentry, acentry_flags in_flags)
../../../rregadmin/secdesc/acentry.h:261"""
# ../../../rregadmin/secdesc/acentry.h 267
acentry_set_flags = _libraries['librregadmin.so.1'].acentry_set_flags
acentry_set_flags.restype = gboolean
# acentry_set_flags(in_acentry, in_flags)
acentry_set_flags.argtypes = [POINTER(ACEntry), acentry_flags]
acentry_set_flags.__doc__ = \
"""gboolean acentry_set_flags(ACEntry * in_acentry, acentry_flags in_flags)
../../../rregadmin/secdesc/acentry.h:267"""
# ../../../rregadmin/secdesc/acentry.h 273
acentry_add_flag = _libraries['librregadmin.so.1'].acentry_add_flag
acentry_add_flag.restype = gboolean
# acentry_add_flag(in_acentry, in_flags)
acentry_add_flag.argtypes = [POINTER(ACEntry), acentry_flags]
acentry_add_flag.__doc__ = \
"""gboolean acentry_add_flag(ACEntry * in_acentry, acentry_flags in_flags)
../../../rregadmin/secdesc/acentry.h:273"""
# ../../../rregadmin/secdesc/acentry.h 279
acentry_del_flag = _libraries['librregadmin.so.1'].acentry_del_flag
acentry_del_flag.restype = gboolean
# acentry_del_flag(in_acentry, in_flags)
acentry_del_flag.argtypes = [POINTER(ACEntry), acentry_flags]
acentry_del_flag.__doc__ = \
"""gboolean acentry_del_flag(ACEntry * in_acentry, acentry_flags in_flags)
../../../rregadmin/secdesc/acentry.h:279"""
# ../../../rregadmin/secdesc/acentry.h 285
acentry_get_access_mask = _libraries['librregadmin.so.1'].acentry_get_access_mask
acentry_get_access_mask.restype = acentry_access_mask
# acentry_get_access_mask(in_acentry)
acentry_get_access_mask.argtypes = [POINTER(ACEntry)]
acentry_get_access_mask.__doc__ = \
"""acentry_access_mask acentry_get_access_mask(unknown * in_acentry)
../../../rregadmin/secdesc/acentry.h:285"""
# ../../../rregadmin/secdesc/acentry.h 292
acentry_has_access_mask = _libraries['librregadmin.so.1'].acentry_has_access_mask
acentry_has_access_mask.restype = gboolean
# acentry_has_access_mask(in_acentry, in_mask)
acentry_has_access_mask.argtypes = [POINTER(ACEntry), acentry_access_mask]
acentry_has_access_mask.__doc__ = \
"""gboolean acentry_has_access_mask(unknown * in_acentry, acentry_access_mask in_mask)
../../../rregadmin/secdesc/acentry.h:292"""
# ../../../rregadmin/secdesc/acentry.h 299
acentry_set_access_mask = _libraries['librregadmin.so.1'].acentry_set_access_mask
acentry_set_access_mask.restype = gboolean
# acentry_set_access_mask(in_acentry, in_mask)
acentry_set_access_mask.argtypes = [POINTER(ACEntry), acentry_access_mask]
acentry_set_access_mask.__doc__ = \
"""gboolean acentry_set_access_mask(ACEntry * in_acentry, acentry_access_mask in_mask)
../../../rregadmin/secdesc/acentry.h:299"""
# ../../../rregadmin/secdesc/acentry.h 306
acentry_add_access_mask = _libraries['librregadmin.so.1'].acentry_add_access_mask
acentry_add_access_mask.restype = gboolean
# acentry_add_access_mask(in_acentry, in_mask)
acentry_add_access_mask.argtypes = [POINTER(ACEntry), acentry_access_mask]
acentry_add_access_mask.__doc__ = \
"""gboolean acentry_add_access_mask(ACEntry * in_acentry, acentry_access_mask in_mask)
../../../rregadmin/secdesc/acentry.h:306"""
# ../../../rregadmin/secdesc/acentry.h 313
acentry_del_access_mask = _libraries['librregadmin.so.1'].acentry_del_access_mask
acentry_del_access_mask.restype = gboolean
# acentry_del_access_mask(in_acentry, in_mask)
acentry_del_access_mask.argtypes = [POINTER(ACEntry), acentry_access_mask]
acentry_del_access_mask.__doc__ = \
"""gboolean acentry_del_access_mask(ACEntry * in_acentry, acentry_access_mask in_mask)
../../../rregadmin/secdesc/acentry.h:313"""
# ../../../rregadmin/secdesc/acentry.h 319
acentry_get_trustee = _libraries['librregadmin.so.1'].acentry_get_trustee
acentry_get_trustee.restype = POINTER(Sid)
# acentry_get_trustee(in_acentry)
acentry_get_trustee.argtypes = [POINTER(ACEntry)]
acentry_get_trustee.__doc__ = \
"""unknown * acentry_get_trustee(unknown * in_acentry)
../../../rregadmin/secdesc/acentry.h:319"""
# ../../../rregadmin/secdesc/acentry.h 325
acentry_set_trustee = _libraries['librregadmin.so.1'].acentry_set_trustee
acentry_set_trustee.restype = gboolean
# acentry_set_trustee(in_acentry, in_sid)
acentry_set_trustee.argtypes = [POINTER(ACEntry), POINTER(Sid)]
acentry_set_trustee.__doc__ = \
"""gboolean acentry_set_trustee(ACEntry * in_acentry, Sid * in_sid)
../../../rregadmin/secdesc/acentry.h:325"""
# ../../../rregadmin/secdesc/acentry.h 332
acentry_compare = _libraries['librregadmin.so.1'].acentry_compare
acentry_compare.restype = c_int
# acentry_compare(ace1, ace2)
acentry_compare.argtypes = [POINTER(ACEntry), POINTER(ACEntry)]
acentry_compare.__doc__ = \
"""int acentry_compare(unknown * ace1, unknown * ace2)
../../../rregadmin/secdesc/acentry.h:332"""
# ../../../rregadmin/secdesc/acentry.h 338
acentry_equal = _libraries['librregadmin.so.1'].acentry_equal
acentry_equal.restype = gboolean
# acentry_equal(ace1, ace2)
acentry_equal.argtypes = [POINTER(ACEntry), POINTER(ACEntry)]
acentry_equal.__doc__ = \
"""gboolean acentry_equal(unknown * ace1, unknown * ace2)
../../../rregadmin/secdesc/acentry.h:338"""
# ../../../rregadmin/secdesc/acentry.h 344
acentry_to_binary = _libraries['librregadmin.so.1'].acentry_to_binary
acentry_to_binary.restype = POINTER(GByteArray)
# acentry_to_binary(in_acentry)
acentry_to_binary.argtypes = [POINTER(ACEntry)]
acentry_to_binary.__doc__ = \
"""GByteArray * acentry_to_binary(unknown * in_acentry)
../../../rregadmin/secdesc/acentry.h:344"""
# ../../../rregadmin/secdesc/acentry.h 351
acentry_write_to_binary = _libraries['librregadmin.so.1'].acentry_write_to_binary
acentry_write_to_binary.restype = gboolean
# acentry_write_to_binary(in_acentry, in_arr)
acentry_write_to_binary.argtypes = [POINTER(ACEntry), POINTER(GByteArray)]
acentry_write_to_binary.__doc__ = \
"""gboolean acentry_write_to_binary(unknown * in_acentry, GByteArray * in_arr)
../../../rregadmin/secdesc/acentry.h:351"""
# ../../../rregadmin/secdesc/acentry.h 357
acentry_to_sddl = _libraries['librregadmin.so.1'].acentry_to_sddl
acentry_to_sddl.restype = STRING
# acentry_to_sddl(in_acentry)
acentry_to_sddl.argtypes = [POINTER(ACEntry)]
acentry_to_sddl.__doc__ = \
"""unknown * acentry_to_sddl(unknown * in_acentry)
../../../rregadmin/secdesc/acentry.h:357"""
# ../../../rregadmin/secdesc/acentry.h 366
acentry_allocation_count = _libraries['librregadmin.so.1'].acentry_allocation_count
acentry_allocation_count.restype = guint32
# acentry_allocation_count()
acentry_allocation_count.argtypes = []
acentry_allocation_count.__doc__ = \
